plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'high-5'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'org.springframework.boot:spring-boot-starter-cache' //redis 캐싱
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' //redis 캐싱
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly 'org.flywaydb:flyway-mysql'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'net.javacrumbs.shedlock:shedlock-spring:7.7.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:7.7.0'
	implementation 'net.javacrumbs.shedlock:shedlock-micrometer:7.7.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.5'
	annotationProcessor 'org.projectlombok:lombok'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
//	testImplementation 'org.springframework.boot:spring-boot-starter-batch-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
